refactor: comment no used code

--- a/src/components/MainSection.astro
+++ b/src/components/MainSection.astro
@@ -18,7 +18,7 @@
           <div class="inner-box">
             <div class="title">Nextbit Internet & TV</div>
             <h1>Ultimate control of your internet</h1>
-            <div class="btns-box">
+            <!-- <div class="btns-box">
               <a href="about.html" class="theme-btn btn-style-two"
                 ><span class="txt"
                   >Read More <i class="lnr lnr-arrow-right"></i></span
@@ -29,7 +29,7 @@
                   >Contact Now <i class="lnr lnr-arrow-right"></i></span
                 ></a
               >
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -53,7 +53,7 @@
           <div class="inner-box">
             <div class="title">Nextbit Internet & TV</div>
             <h1>Ultimate control of your internet</h1>
-            <div class="btns-box">
+            <!-- <div class="btns-box">
               <a href="about.html" class="theme-btn btn-style-two"
                 ><span class="txt"
                   >Read More <i class="lnr lnr-arrow-right"></i></span
@@ -64,7 +64,7 @@
                   >Contact Now <i class="lnr lnr-arrow-right"></i></span
                 ></a
               >
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
