--- a/src/components/AppointmentSection.astro
+++ b/src/components/AppointmentSection.astro
@@ -1,32 +1,33 @@
 <section
   class="appointment-section"
-  style="background-image: url(images/background/pattern-1.png)"
+  style="background-image: url(images/background/pattern-1.png); background-blend-mode: luminosity;"
 >
   <div class="auto-container">
     <div class="row clearfix">
       <!-- Title Column -->
-      <div class="title-column col-lg-6 col-md-12 col-sm-12">
+      <div class="title-column col-lg-10 col-md-12 col-sm-12">
         <div class="inner-column">
-          <h3>Let's find deals and services available in your area</h3>
+          <h3>Aprovecha la gran promoción de instalación</h3>
+          <p class="text-white">Por solo $60 $40 de nuestro plan Familiar con un total de 400M de internet + 88 canales de tv por $35 mensuales.</p>
         </div>
       </div>
 
       <!-- Form Column -->
-      <div class="form-column col-lg-6 col-md-12 col-sm-12">
+      <div class="form-column col-lg-2 col-md-12 col-sm-12">
         <div class="inner-column">
           <div class="appointment-form">
             <form method="post" action="contact.html">
               <div class="form-group">
-                <input
+                <!-- <input
                   type="email"
                   name="email"
                   value=""
                   placeholder="Enter street address & apartment"
                   required=""
-                />
+                /> -->
                 <button type="submit" class="theme-btn btn-style-two"
                   ><span class="txt"
-                    >Check Availability <i class="lnr lnr-arrow-right"
+                    >Ver promoción <i class="lnr lnr-arrow-right"
                     ></i></span
                   ></button
                 >
@@ -35,6 +36,7 @@
           </div>
         </div>
       </div>
+      
     </div>
   </div>
 </section>
