--- a/src/components/InternetSection.astro
+++ b/src/components/InternetSection.astro
@@ -5,19 +5,30 @@
   <div class="auto-container">
     <div class="clearfix">
       <div class="content-column">
-        <h2>Save money by bundling your internet service with TV service.</h2>
+        <h2>La tecnología de internet FTTx</h2>
         <div class="text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eius to
-          mod tempor incididunt ut labore et dolore magna aliqua. Ut enims ad
-          minim veniam. Aenean massa. Cum sociis natoque penatibus et magnis dis
-          partu rient to montes.Aene an massa.
+          Te permitirá disfrutar de una mayor calidad de conexión a internet y facilitará  el acceso a servicios y aplicaciones que requieren un ancho de banda considerable, aporta calidad y disponibilidad para cualquier medio de recepcion de television se puede apreciar la señal desde cualquier tv:
         </div>
-        <div class="price">$25/ per month</div>
+        <ul class="internet-list">
+          <li class="internet-list-item">Streaming de clases online y videojuegos</li>
+          <li class="internet-list-item">Trabajo remoto</li>
+          <li class="internet-list-item">Telemedicina</li>
+          <li class="internet-list-item">Television via cable</li>
+          <li class="internet-list-item">Servicio de iptv (próximamente)</li>
+        </ul>
+        <!-- <div class="price">$25/ per month</div>
         <a href="about.html" class="theme-btn btn-style-four"
           ><span class="txt">Read More <i class="lnr lnr-arrow-right"></i></span
           ></a
-        >
+        > -->
       </div>
     </div>
   </div>
 </section>
+
+<style>
+  .internet-list-item {
+    list-style-type: disc;
+    list-style-position: inside;
+  }
+</style>
