--- a/src/components/MainFooter.astro
+++ b/src/components/MainFooter.astro
@@ -1,33 +1,32 @@
 <footer class="main-footer">
   <div
     class="pattern-layer-one"
-    style="background-image: url(images/background/pattern-12.png)"
+    style="background-image: url(images/background/pattern-12-new.png)"
   >
   </div>
   <div
     class="pattern-layer-two"
-    style="background-image: url(images/background/pattern-13.png)"
+    style="background-image: url(images/background/pattern-13-new.png)"
   >
   </div>
   <div class="auto-container">
     <div class="widgets-section">
       <div class="logo">
-        <a href="index.html"><img src="images/footer-logo.png" alt="" /></a>
+        <a href="index.html"><img src="images/netsystem-logo.png" alt="" /></a>
       </div>
       <ul class="contact-info-list">
         <li>
-          <span class="icon"><img src="images/icons/icon-1.png" alt="" /></span>
-          <a href="tel:+3453-909-6565">+3453-909-6565</a><br />
-          <a href="tel:+2390-875-223">+2390-875-223</a>
+          <p class="contact-title">Soporte técnico</p>
+          <a href="tel:+58-412-765-3967">0412-765-3967</a><br />
+          <a href="tel:+58-412-765-1885">0412-7651-885</a><br>
+          <a href="tel:+0268-251-3038">0268-251-3038</a>
         </li>
         <li>
-          <span class="icon"><img src="images/icons/icon-2.png" alt="" /></span>
-          <a href="mailto:infoname@gmail.com">infoname@gmail.com</a><br />
-          <a href="www.yourname.com">www.yourname.com</a>
-        </li>
-        <li>
-          <span class="icon"><img src="images/icons/icon-3.png" alt="" /></span>
-          503 Old Buffalo Street <br /> Northwest #205, New York-3087
+          <p class="contact-title">Atención al cliente</p>
+
+          <a href="tel:+268-253-2179">0268-253-2179</a><br />
+          <a href="tel:+268-252-0808">0268-252-0808</a><br>
+          <a href="tel:+58-412-685-4183">0412-685-4183</a><br>
         </li>
       </ul>
 
@@ -46,9 +45,32 @@
   <div class="footer-bottom">
     <div class="auto-container">
       <div class="copyright">
-        &copy; 2022 Your Company. All Rights Reserved. Designed By <a
-          href="https://themeforest.net/user/themexriver">Themexriver</a>
+        &copy; © 2024 Tv Cable Net Systems. All Rights Reserved. Maded By
+        <img src="images/novanet-logo.svg" alt="">
       </div>
     </div>
   </div>
 </footer>
+
+<style>
+  .logo {
+    margin-left: auto;
+    margin-right: auto;
+    width: 169px;
+    height: 169px;
+    border-radius: 50%;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .logo img {
+    width: 115px;
+    height: 108px;
+  }
+
+  .contact-title {
+    color: #0B94B8;
+  }
+</style>
