--- a/src/components/MainHeader.astro
+++ b/src/components/MainHeader.astro
@@ -39,7 +39,7 @@
         <div class="pull-left logo-box">
           <div class="logo">
             <a href="index.html"
-              ><img src="images/logo.png" alt="" title="" /></a>
+              ><img src="images/netsystem-logo.png" alt="" title="" /></a>
           </div>
         </div>
         <div class="nav-outer clearfix">
@@ -71,8 +71,8 @@
             >
               <ul class="navigation clearfix">
                 <li class="current dropdown">
-                  <a href="#">Home</a>
-                  <ul>
+                  <a href="#">Inicio</a>
+                  <!-- <ul>
                     <li><a href="index.html">Homepage One</a></li>
                     <li><a href="index-2.html">Homepage Two</a></li>
                     <li><a href="index-3.html">Homepage Three</a></li>
@@ -82,41 +82,41 @@
                     <li><a href="index-7.html">Homepage Seven</a></li>
                     <li><a href="index-8.html">Homepage Eight</a></li>
                     <li><a href="index-9.html">Homepage Nine</a></li>
-                  </ul>
+                  </ul> -->
                 </li>
                 <li class="dropdown">
-                  <a href="#">About</a>
-                  <ul>
+                  <a href="#">Planes</a>
+                  <!-- <ul>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="price.html">Pricing</a></li>
                     <li><a href="movie.html">Movie's</a></li>
-                  </ul>
+                  </ul> -->
                 </li>
                 <li class="dropdown">
-                  <a href="#">Services</a>
-                  <ul>
+                  <a href="#">Panel de usuario</a>
+                  <!-- <ul>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="services-detail.html">Services Detail</a></li>
-                  </ul>
+                  </ul> -->
                 </li>
                 <li class="dropdown">
-                  <a href="#">Shop</a>
-                  <ul>
+                  <a href="#">Galeria</a>
+                  <!-- <ul>
                     <li><a href="shop.html">Our Products</a></li>
                     <li><a href="shop-single.html">Product Single</a></li>
                     <li><a href="shoping-cart.html">Shoping Cart</a></li>
                     <li><a href="checkout.html">Checkout</a></li>
-                  </ul>
+                  </ul> -->
                 </li>
                 <li class="dropdown">
-                  <a href="#">Blog</a>
-                  <ul>
+                  <a href="#">Servicios</a>
+                  <!-- <ul>
                     <li><a href="blog.html">Our Blog</a></li>
                     <li><a href="news-detail.html">Blog Single</a></li>
                     <li><a href="not-found.html">Not Found</a></li>
-                  </ul>
+                  </ul> -->
                 </li>
-                <li><a href="contact.html">Contact us</a></li>
+                <li><a href="contact.html">Contacto</a></li>
               </ul>
             </div>
           </nav>
@@ -300,3 +300,10 @@
     </nav>
   </div><!-- End Mobile Menu -->
 </header>
+
+<style>
+  .logo-box .logo img {
+    width: 100px;
+    height: 90px;
+  }
+</style>
