--- a/src/components/PricingSection.astro
+++ b/src/components/PricingSection.astro
@@ -1,17 +1,17 @@
 <section
   class="pricing-section"
-  style="background-image: url(images/background/pattern-3.png)"
+  style="background-image: url(images/background/pattern-3.png); background-blend-mode: luminosity;"
 >
   <div class="auto-container">
     <!-- Sec Title -->
     <div class="sec-title light centered">
-      <div class="title">Pricing Plan</div>
-      <h2>Choose your plan</h2>
+      <!-- <div class="title">Pricing Plan</div> -->
+      <h2>Servicios adicionales</h2>
     </div>
     <!-- End Sec Title -->
     <div class="row clearfix">
       <!-- Price Block -->
-      <div class="price-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
+      <div class="price-block col-xl-4 col-lg-4 col-md-6 col-sm-12">
         <div
           class="inner-box wow fadeInLeft"
           data-wow-delay="0ms"
@@ -19,26 +19,29 @@
         >
           <div
             class="upper-box"
-            style="background-image: url(images/background/pattern-4.png)"
+            style="background-image: url(images/background/pattern-4-new.png)"
           >
             <ul class="icon-list">
               <li>
-                <span class="icon"
-                  ><img src="images/icons/service-1.svg" alt="" /></span>
+                <span class="icon">
+                  <!-- <img src="images/icons/service-1.svg" alt="" /> -->
+                  <i class="fa fa-wifi fa-3x"></i>
+                </span>
               </li>
             </ul>
-            <h4>Only Internet <span>$55.00 / Month</span></h4>
+            <h4>Instalación</h4>
           </div>
           <div class="lower-box">
-            <ul class="price-list">
+            <p>Fuera de promoción tiene un costo base de 40$ para internet + TV (incluye router) y 60$ para solo televisión, se instalan en ambos casos un total de 2 televisores, de requerir más tiene un costo de 15$ cada televisor extra.</p>
+            <!-- <ul class="price-list">
               <li>Internet with a 100Mbps</li>
               <li>Connect multiple users</li>
               <li>WiFi router & prevention</li>
               <li>Unlimited devices</li>
-            </ul>
+            </ul> -->
             <div class="button-box">
-              <a href="price.html" class="theme-btn btn-style-four"
-                ><span class="txt">Get started</span></a
+              <a href="price.html" class="box-cta"
+                ><span class="txt">Leer más <i class="lnr lnr-arrow-right"></i></span></a
               >
             </div>
           </div>
@@ -46,7 +49,7 @@
       </div>
 
       <!-- Price Block -->
-      <div class="price-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
+      <div class="price-block col-xl-4 col-lg-4 col-md-6 col-sm-12">
         <div
           class="inner-box wow fadeInLeft"
           data-wow-delay="150ms"
@@ -54,26 +57,24 @@
         >
           <div
             class="upper-box"
-            style="background-image: url(images/background/pattern-4.png)"
+            style="background-image: url(images/background/pattern-4-new.png)"
           >
             <ul class="icon-list">
               <li>
-                <span class="icon"
-                  ><img src="images/icons/service-2.svg" alt="" /></span>
+                <span class="icon">
+                  <i class="fa fa-cog fa-3x"></i>
+                </span>
+                <!-- <span class="icon"
+                  ><img src="images/icons/service-2.svg" alt="" /></span> -->
               </li>
             </ul>
-            <h4>Only TV <span>$55.00 / Month</span></h4>
+            <h4>Visita técnica</h4>
           </div>
           <div class="lower-box">
-            <ul class="price-list">
-              <li>Internet with a 100Mbps</li>
-              <li>Connect multiple users</li>
-              <li>WiFi router & prevention</li>
-              <li>Unlimited devices</li>
-            </ul>
+            <p>Sin costo alguno, está incluido en su pago de mensualidad, se resuelven las averías en menos de 24 horas, con personal de guardia los 7 días de la semana.</p>
             <div class="button-box">
-              <a href="price.html" class="theme-btn btn-style-four"
-                ><span class="txt">Get started</span></a
+              <a href="price.html" class="box-cta"
+                ><span class="txt">Leer más <i class="lnr lnr-arrow-right"></i></span></a
               >
             </div>
           </div>
@@ -81,7 +82,7 @@
       </div>
 
       <!-- Price Block -->
-      <div class="price-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
+      <div class="price-block col-xl-4 col-lg-4 col-md-6 col-sm-12">
         <div
           class="inner-box wow fadeInLeft"
           data-wow-delay="300ms"
@@ -89,69 +90,23 @@
         >
           <div
             class="upper-box"
-            style="background-image: url(images/background/pattern-4.png)"
+            style="background-image: url(images/background/pattern-4-new.png)"
           >
             <ul class="icon-list">
               <li>
-                <span class="icon"
-                  ><img src="images/icons/service-3.svg" alt="" /></span>
+                <span class="icon">
+                  <!-- <img src="images/icons/service-3.svg" alt="" /> -->
+                  <i class="fa fa-users fa-3x"></i>
+                </span>
               </li>
             </ul>
-            <h4>Only Home Phone <span>$55.00 / Month</span></h4>
+            <h4>Guías equipos</h4>
           </div>
           <div class="lower-box">
-            <ul class="price-list">
-              <li>Internet with a 100Mbps</li>
-              <li>Connect multiple users</li>
-              <li>WiFi router & prevention</li>
-              <li>Unlimited devices</li>
-            </ul>
+            <p>Cada instalación incluye 6 elementos: 4 pasivos (no transmiten electricidad) y 2 activos. De forma pasiva hay un equipo pegado a la pared llamado ‘Roseta’ y es donde se recibe la fibra que va del poste y llega....</p>
             <div class="button-box">
-              <a href="price.html" class="theme-btn btn-style-four"
-                ><span class="txt">Get started</span></a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Price Block -->
-      <div class="price-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
-        <div
-          class="inner-box wow fadeInLeft"
-          data-wow-delay="450ms"
-          data-wow-duration="1500ms"
-        >
-          <div
-            class="upper-box"
-            style="background-image: url(images/background/pattern-4.png)"
-          >
-            <ul class="icon-list">
-              <li>
-                <span class="icon"
-                  ><img src="images/icons/service-1.svg" alt="" /></span>
-              </li>
-              <li>
-                <span class="icon"
-                  ><img src="images/icons/service-2.svg" alt="" /></span>
-              </li>
-              <li>
-                <span class="icon"
-                  ><img src="images/icons/service-3.svg" alt="" /></span>
-              </li>
-            </ul>
-            <h4>Internet + TV + Phone <span>$55.00 / Month</span></h4>
-          </div>
-          <div class="lower-box">
-            <ul class="price-list">
-              <li>Internet with a 100Mbps</li>
-              <li>Connect multiple users</li>
-              <li>WiFi router & prevention</li>
-              <li>Unlimited devices</li>
-            </ul>
-            <div class="button-box">
-              <a href="price.html" class="theme-btn btn-style-four"
-                ><span class="txt">Get started</span></a
+              <a href="price.html" class="box-cta"
+                ><span class="txt">Leer más <i class="lnr lnr-arrow-right"></i></span></a
               >
             </div>
           </div>
@@ -160,3 +115,26 @@
     </div>
   </div>
 </section>
+
+<style>
+  .inner-box {
+    min-height: 549px;
+  }
+
+  .icon {
+    color: #0B94B8;
+  }
+
+  .icon i {
+    margin-top: 0.8rem;
+  }
+
+  .box-cta {
+    color: #37406A;
+    font-weight: 500;
+  }
+
+  .box-cta:hover {
+    text-decoration: underline;
+  }
+</style>
