--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -3,8 +3,10 @@
   style="background-image: url(images/background/pattern-2.png)"
 >
   <div class="auto-container">
+    <h2 class="mb-5 text-center service-title">Planes residenciales</h2>
     <!-- Upper Section -->
     <div class="upper-section">
+
       <div class="row clearfix">
         <!-- Service block -->
         <div class="service-block col-lg-4 col-md-6 col-sm-12">
@@ -15,10 +17,9 @@
           >
             <span class="border-one"></span>
             <span class="border-two"></span>
-            <h4><a href="services-detail.html">Broadband</a></h4>
+            <h4><a href="services-detail.html">Familiar</a></h4>
             <div class="text">
-              Lorem ipsum dolor sit amet them consec tetura dipiscing elit sed
-              doeiumod Donec modern solution quam felis.
+              400 megas de descarga y subida + 88 canales de TV por $35
             </div>
             <div class="icon">
               <img src="images/icons/service-1.svg" alt="" />
@@ -39,10 +40,9 @@
           >
             <span class="border-one"></span>
             <span class="border-two"></span>
-            <h4><a href="services-detail.html">Satelite TV</a></h4>
+            <h4><a href="services-detail.html">Básico</a></h4>
             <div class="text">
-              Lorem ipsum dolor sit amet them consec tetura dipiscing elit sed
-              doeiumod Donec modern solution quam felis.
+              100 megas de descarga y subida + 88 canales de TV por $30
             </div>
             <div class="icon">
               <img src="images/icons/service-2.svg" alt="" />
@@ -63,13 +63,43 @@
           >
             <span class="border-one"></span>
             <span class="border-two"></span>
-            <h4><a href="services-detail.html">Home Phone</a></h4>
+            <h4><a href="services-detail.html">Solo TV</a></h4>
+            <div class="text">
+              88 canales de televisión por tan solo 7,5$
+            </div>
+            <div class="icon">
+              <img src="images/icons/service-3.svg" alt="" />
+            </div>
+            <a class="services" href="services-detail.html"
+              >Get Broadband Service <span class="arrow lnr lnr-arrow-right"
+              ></span></a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <h2 class="mb-5 text-center service-title">Planes empresariales</h2>
+    <!-- Upper Section -->
+    <div class="upper-section">
+
+      <div class="row clearfix">
+        <!-- Service block -->
+        <div class="service-block col-lg-4 col-md-6 col-sm-12 offset-lg-4">
+          <div
+            class="inner-box wow fadeInUp"
+            data-wow-delay="0ms"
+            data-wow-duration="1500ms"
+          >
+            <span class="border-one"></span>
+            <span class="border-two"></span>
+            <h4><a href="services-detail.html">Satelite TV</a></h4>
             <div class="text">
               Lorem ipsum dolor sit amet them consec tetura dipiscing elit sed
               doeiumod Donec modern solution quam felis.
             </div>
             <div class="icon">
-              <img src="images/icons/service-3.svg" alt="" />
+              <img src="images/icons/service-2.svg" alt="" />
             </div>
             <a class="services" href="services-detail.html"
               >Get Broadband Service <span class="arrow lnr lnr-arrow-right"
@@ -100,22 +130,24 @@
           <div class="inner-column">
             <!-- Sec Title -->
             <div class="sec-title">
-              <div class="title">WHO WE ARE</div>
-              <h2>Get TV service with your internet service</h2>
+              <!-- <div class="title">WHO WE ARE</div> -->
+              <h2>Accede al panel de usuarios</h2>
             </div>
             <div class="bold-text">
-              Business is the activity of making one's living or making money by
-              producing or buying and selling products
+              Aquí podrás administrar y controlar diversos aspectos de su cuenta y servicios tales como:
             </div>
             <div class="text">
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed eius
-              to mod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enims ad minim veniam. Aenean massa. Cum sociis natoque penatibus
-              et magnis dis partu rient to montes.Aene an massa.
+              <ul class="content-list">
+                <li>Gestión de su cuenta</li>
+                <li>Configuración de los servicios</li>
+                <li>Monitorización y disponibilidad del servicio.</li>
+                <li>Soporte y asistencia técnica.</li>
+                <li>Facturación y pagos.</li>
+              </ul>
             </div>
             <a href="about.html" class="theme-btn btn-style-four"
               ><span class="txt"
-                >Read More <i class="lnr lnr-arrow-right"></i></span
+                >Acceder <i class="lnr lnr-arrow-right"></i></span
               ></a
             >
           </div>
@@ -125,3 +157,15 @@
     <!-- End Lower Section -->
   </div>
 </section>
+
+<style>
+  .service-title {
+    color: #061392;
+  }
+
+  .content-list > li {
+    list-style-type: disc;
+    list-style-position: inside;
+    color: #0B94B8;
+  }
+</style>
