--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,11 +11,13 @@ import FacilitySection from "../components/FacilitySection.astro";
 import InternetSection from "../components/InternetSection.astro";
 import TestimonialSection from "../components/TestimonialSection.astro";
 import ClientsSection from "../components/ClientsSection.astro";
-import CTASection from "../components/CTASection.astro";
+// import CTASection from "../components/CTASection.astro";
+import InfoSection from "../components/InfoSection.astro";
 import FeaturedSection from "../components/FeaturedSection.astro";
 import StoreSection from "../components/StoreSection.astro";
 import MainFooter from "../components/MainFooter.astro";
 import SearchPopup from "../components/SearchPopup.astro";
+import MapSection from "../components/MapSection.astro";
 ---
 
 <Layout title="Welcome to Astro.">
@@ -44,36 +46,37 @@ import SearchPopup from "../components/SearchPopup.astro";
       <ServicesSection />
       <!-- End Services Section -->
 
-      <!-- Pricing Section -->
-      <PricingSection />
-      <!-- End Pricing Section -->
+      <!-- Internet Section -->
+      <InternetSection />
+      <!-- End Internet Section -->
 
       <!-- Facility Section -->
       <FacilitySection />
       <!-- End Facility Section -->
 
-      <!-- Internet Section -->
-      <InternetSection />
-      <!-- End Internet Section -->
+      <!-- Pricing Section -->
+      <PricingSection />
+      <!-- End Pricing Section -->
+
 
       <!-- Testimonial Section -->
-      <TestimonialSection />
+      <!-- <TestimonialSection /> -->
       <!-- End Testimonial Section -->
 
       <!-- Clients Section -->
-      <ClientsSection />
+      <!-- <ClientsSection /> -->
       <!-- End Clients Section -->
 
       <!-- Featured Section -->
-      <FeaturedSection />
+      <!-- <FeaturedSection /> -->
       <!-- End Featured Section -->
 
       <!-- Store Section -->
-      <StoreSection />
+      <MapSection />
       <!-- End Store Section -->
 
       <!-- CTA Section -->
-      <CTASection />
+      <InfoSection />
       <!-- End CTA Section -->
 
       <!-- Main Footer -->
