--- a/src/components/FacilitySection.astro
+++ b/src/components/FacilitySection.astro
@@ -4,12 +4,12 @@
     <div class="sec-title">
       <div class="clearfix">
         <div class="pull-left">
-          <div class="title">Our Facility</div>
-          <h2>Few great reasons make <br> you choice us</h2>
+          <!-- <div class="title">Galería de imágenes</div> -->
+          <h2>Galería de imágenes</h2>
         </div>
-        <div class="pull-right">
+        <!-- <div class="pull-right">
           <div class="text">Business is the activity of making one's living or making money by producing <br> cumsociis natoque penatibus et magnis dis partu rient to montes. Aene an <br> massa. cumsociis natoque penatibus.  </div>
-        </div>
+        </div> -->
       </div>
     </div>
     <!-- End Sec Title -->
@@ -23,40 +23,40 @@
             <!-- Facility Block -->
             <div class="facility-block col-lg-6 col-md-6 col-sm-12">
               <div class="inner-box">
-                <div class="pattern-layer" style="background-image: url(images/background/pattern-14.png)"></div>
+                <!-- <div class="pattern-layer" style="background-image: url(images/background/pattern-14.png)"></div>
                 <div class="icon-box flaticon-swimming-pool"></div>
                 <h5><a href="services-detail.html">Free Installation</a></h5>
-                <div class="text">Lorem ipsum dolor sit amet them consec tetur elit sed do eiumod. Donec quam felis ies nec.</div>
+                <div class="text">Lorem ipsum dolor sit amet them consec tetur elit sed do eiumod. Donec quam felis ies nec.</div> -->
               </div>
             </div>
             
             <!-- Facility Block -->
             <div class="facility-block col-lg-6 col-md-6 col-sm-12">
               <div class="inner-box">
-                <div class="pattern-layer" style="background-image: url(images/background/pattern-14.png)"></div>
+                <!-- <div class="pattern-layer" style="background-image: url(images/background/pattern-14.png)"></div>
                 <div class="icon-box flaticon-5g"></div>
                 <h5><a href="services-detail.html">Ultrafast Connect</a></h5>
-                <div class="text">Lorem ipsum dolor sit amet them consec tetur elit sed do eiumod. Donec quam felis ies nec.</div>
+                <div class="text">Lorem ipsum dolor sit amet them consec tetur elit sed do eiumod. Donec quam felis ies nec.</div> -->
               </div>
             </div>
             
             <!-- Facility Block -->
             <div class="facility-block col-lg-6 col-md-6 col-sm-12">
               <div class="inner-box">
-                <div class="pattern-layer" style="background-image: url(images/background/pattern-14.png)"></div>
+                <!-- <div class="pattern-layer" style="background-image: url(images/background/pattern-14.png)"></div>
                 <div class="icon-box flaticon-8k"></div>
                 <h5><a href="services-detail.html">4K and 8K Quality</a></h5>
-                <div class="text">Lorem ipsum dolor sit amet them consec tetur elit sed do eiumod. Donec quam felis ies nec.</div>
+                <div class="text">Lorem ipsum dolor sit amet them consec tetur elit sed do eiumod. Donec quam felis ies nec.</div> -->
               </div>
             </div>
             
             <!-- Facility Block -->
             <div class="facility-block col-lg-6 col-md-6 col-sm-12">
               <div class="inner-box">
-                <div class="pattern-layer" style="background-image: url(images/background/pattern-14.png)"></div>
+                <!-- <div class="pattern-layer" style="background-image: url(images/background/pattern-14.png)"></div>
                 <div class="icon-box flaticon-customer-service"></div>
                 <h5><a href="contact.html">Fast Support 24/7</a></h5>
-                <div class="text">Lorem ipsum dolor sit amet them consec tetur elit sed do eiumod. Donec quam felis ies nec.</div>
+                <div class="text">Lorem ipsum dolor sit amet them consec tetur elit sed do eiumod. Donec quam felis ies nec.</div> -->
               </div>
             </div>
             
@@ -77,3 +77,9 @@
     </div>
   </div>
 </section>
+
+<style>
+  .inner-box {
+    height: 300px;
+  }
+</style>
