--- a/src/components/MainSection.astro
+++ b/src/components/MainSection.astro
@@ -16,8 +16,10 @@
         <!-- Content Boxed -->
         <div class="content-boxed">
           <div class="inner-box">
-            <div class="title">Nextbit Internet & TV</div>
+            <!-- <div class="title">Nextbit Internet & TV</div> -->
             <h1>Ultimate control of your internet</h1>
+            <p class="text-white lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, itaque!</p>
+
             <!-- <div class="btns-box">
               <a href="about.html" class="theme-btn btn-style-two"
                 ><span class="txt"
@@ -51,8 +53,9 @@
         <!-- Content Boxed -->
         <div class="content-boxed">
           <div class="inner-box">
-            <div class="title">Nextbit Internet & TV</div>
+            <!-- <div class="title">Nextbit Internet & TV</div> -->
             <h1>Ultimate control of your internet</h1>
+            <p class="text-white lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, itaque!</p>
             <!-- <div class="btns-box">
               <a href="about.html" class="theme-btn btn-style-two"
                 ><span class="txt"
