refactor: add rest items

--- a/src/components/MainFooter.astro
+++ b/src/components/MainFooter.astro
@@ -14,6 +14,7 @@
       <div class="logo">
         <a href="index.html"><img src="images/netsystem-logo.png" alt="" /></a>
       </div>
+      <h4 class="footer-message">Envíanos un mensaje por WhatsApp</h4>
       <ul class="contact-info-list">
         <li>
           <p class="contact-title">Soporte técnico</p>
@@ -72,5 +73,14 @@
 
   .contact-title {
     color: #0B94B8;
+  }
+
+  .footer-message {
+    font-weight: 700;
+    line-height: 46.8px;
+    text-align: center;
+    color: #fff;
+    font-size: 36px;
+    margin-bottom: 21px;
   }
 </style>
