fix: sticky header

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -225,7 +225,7 @@
 }
 
 .main-header .sticky-header .mobile-nav-toggler{
-	display:none;
+	/* display:none; */
 	cursor:pointer;
 	color:var(--black-color);
 	font-size:var(--font-30)
